Ajustes de arquitectura y agregar excepciones