@@ -2,10 +2,9 @@ package com.bootcamp_2024.ms_stock.infraestructura.adaptadores.salida.persistenc
 
 import com.bootcamp_2024.ms_stock.dominio.modelo.Categoria;
 import com.bootcamp_2024.ms_stock.dominio.repository.CategoriaRepository;
-import com.bootcamp_2024.ms_stock.infraestructura.adaptadores.salida.mapper.CategoriaMapper;
+import com.bootcamp_2024.ms_stock.infraestructura.adaptadores.salida.mapper.CategoriaEntityMapper;
 import com.bootcamp_2024.ms_stock.infraestructura.adaptadores.salida.persistencia.entity.CategoriaEntity;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Repository;
@@ -21,7 +20,7 @@ public class CategoriaRepositoryAdapter implements CategoriaRepository {
     private CategoriaJpaRepository categoriaJpaRepository;
 
     @Autowired
-    private CategoriaMapper categoriaMapper;
+    private CategoriaEntityMapper categoriaMapper;
 
     @Override
     public Optional<Categoria> findByNombre(String nombre) {
@@ -45,6 +44,6 @@ public class CategoriaRepositoryAdapter implements CategoriaRepository {
         return categoriaJpaRepository.findAll(pageable)
                 .stream()
                 .map(categoriaMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
